1999-07-04  Chris Rankin  <rankinc@zipworld.com.au>

    * FvwmScript/FvwmScript.c : Added new signal handling (sigaction),
    installed an exit-procedure to close down X and used fvwmSelect()
    instead of raw select(). First parameter of select is now
    guaranteed to be correct. Added GNU "noreturn" attribute to Quit().
    ScriptPath variable is now handled correctly from FvwmTalk, assuming
    that ScriptPath is not already defined.

1999-07-01  Paul D. Smith  <psmith@gnu.org>

	* FvwmGtk/menu.c (menu_submenu): Remove unused variable.

1999-06-29  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/FvwmForm.c (DoCommand): Remove one second delay on the
	FvwmForm shutdown.

1999-06-28 Olvier Chapuis <olivier.chapuis@free.fr>

	* INSTALL.fvwm2: Added LibStroke in the optional libraries section.
	* fvwm/fvwm2.1: Corrected Stroke entries.

1999-06-28  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmButtons/FvwmButtons.c: removed stray fprintf

1999-06-27  Olivier Chapuis <olivier.chapuis@free.fr>

	* FvwmAnimate/FvwmAnimate.1: Corrected misprints
	* FvwmButtons/FvwmButtons.1:
	* FvwmCommand/FvwmCommand.1:
	* FvwmConsole/FvwmConsoleC.pl.1:
	* FvwmEvent/FvwmEvent.1:
	* FvwmForm/FvwmFrom.1:
	* FvwmPager/FvwmPager.1:
	* FvwmWharf/FvwmWharf.1:
	* FvwmSaveDesk/FvwmSaveDesk.1:

1999-06-27  Dominik Vogt  <dominik_vogt@gmx.de>

	* FvwmScript/Widgets/Widget.c:
	* FvwmScript/Widgets/VScrollBar.c:
	* FvwmScript/Widgets/VDipstick.c:
	* FvwmScript/Widgets/Tools.h:
	* FvwmScript/Widgets/Tools.c:
	* FvwmScript/Widgets/TextField.c:
	* FvwmScript/Widgets/Swallow.c:
	* FvwmScript/Widgets/Rectangle.c:
	* FvwmScript/Widgets/RadioButton.c:
	* FvwmScript/Widgets/PushButton.c:
	* FvwmScript/Widgets/PopupMenu.c:
	* FvwmScript/Widgets/MiniScroll.c:
	* FvwmScript/Widgets/Menu.c:
	* FvwmScript/Widgets/List.c:
	* FvwmScript/Widgets/ItemDraw.c:
	* FvwmScript/Widgets/HScrollBar.c:
	* FvwmScript/Widgets/HDipstick.c:
	* FvwmScript/Widgets/CheckBox.c:
	* FvwmScript/types.h: