@@ -85,8 +85,11 @@ Claasen), IgnoreModifiers command, enhancements of GotoPage and MoveToPage
 syntax, Repeat command, menu code clean up, panel enhancements (FvwmButtons),
 transient FvwmPager, GSFR for the main module, dynamic menus, recursive menus,
 rewrite of menu drawing, speed up startup with lots of menus, new menu styles
-BorderWidth, ItemFormat, Hilight3DThickness and SubmenusLeft, major clean up
-of the menu code, improved transient FvwmPager.
+BorderWidth, ItemFormat, VerticalItemSpacing, VerticalTitleSpacing,
+Hilight3DThickness and SubmenusLeft, major clean up of the menu code,
+improved transient FvwmPager, mproved transient window handling, MaxWindowSize
+style, Improved(?) mouse paging, RaiseTransient and LowerTransient styles,
+nicer cursors.
 
 A.J. Weber:
 SnapAttraction patch.
