@@ -75,6 +75,9 @@ option is not specified, fixed font is used.
 .IP "*FvwmTaskBarFore \fIcolor\fP"
 Specifies the color to use for the button names.
 
+.IP "*FvwmTaskBarIconFore \fIcolor\fP"
+Specifies the color to use for the button names which represent iconified windows.
+
 .IP "*FvwmTaskBarBack \fIcolor\fP"
 Specifies the background color for the bar and buttons.
 
@@ -245,4 +248,9 @@ There is a bug report that FvwmTaskBar doesn't work well with
 Autohide turned on.
 
 .SH AUTHOR
-David Barth (barth@di.epfl.ch)
+.IP "\fIDavid Barth\fP <barth@di.epfl.ch>"
+
+.SH ACKNOWLEDGMENTS
+These people have contributed to \fBFvwmTaskBar\fP:
+
+.IP "\fIDanny Dulai\fP <nirva@ishiboo.com>"
